# Origin

./: CMakeLists.txt  LICENSE.md  README  README.md  README.rst  README~  graphgen.c  model_ssne.c  specieslist.c
cmake/Modules/: FindMath.cmake
src/: 3216264212.graphml  3216264212.xml  4071382823.graphml  4071382823.xml  CMakeLists.txt  Makefile  Makefile~  adjlist.c  adjlist.h  adjlist_tests.c  amino.c  amino.h  build.py  common.h  dvector.c  dvector.h  ecology.c  ecology.h  gcode.h  graph.c  graph.h  graph2.c  graph2.h  graphgen.c  graphgen.h  hon.h  ivector.c  ivector.h  main.c  maths.c  maths.h  model_ros11.c  model_ssne.c  origin  origin.h  seq.c  seq.h  sll.c  sll.h  species.c  (+18 more)
